--- a/main.css
+++ b/main.css
@@ -5,10 +5,7 @@
 }
 
 :root {
-  --fontsizeh1: 2.5rem;
   --fontsizeh2: 1.4rem;
-  --fontsizeh3: ;
-  --fontsizeh4: ;
   --fontsizep: 1.1rem;
   --fontsizelinks: 0.9rem;
   --linkslextcolor: rgb(119, 149, 208);
@@ -28,16 +25,7 @@ body {
 }
 header {
   padding: 1vh 3vw;
-}
-
-header figure {
-  width: 8rem;
-}
-
-header figure img {
-  display: block;
-  width: 100%;
-  height: auto;
+  margin: 2vh 0;
 }
 
 header div {
@@ -49,6 +37,7 @@ div.center {
 }
 
 main.container {
+  margin-top: 4vh;
   width: 100%;
   display: flex;
   flex-flow: column nowrap;
@@ -59,9 +48,9 @@ main.container {
 }
 
 .update {
-  margin-top: 4vh;
-  padding-top: 4vh;
-  align-self: flex-start;
+  order: 2;
+  -ms-flex-order: 2;
+  padding-top: 2vh;
   color: var(--alignselfTextColor);
   font-family: var(--fontFamLucida);
 }
@@ -69,7 +58,7 @@ main.container {
   font-size: var(--fontsizeh2);
   line-height: 2rem;
   font-weight: bolder;
-  margin-bottom: 1vh;
+  margin-bottom: 1.2vh;
 }
 .update ul {
   font-size: var(--fontsizelinks);
@@ -82,9 +71,7 @@ main.container {
 .update ul li span {
   margin-right: 1vw;
 }
-.update ul li:nth-child(even) {
-  margin-left: 0.5vw;
-}
+
 .update ul li:last-child span .fa-circle-check {
   color: #6ab343;
 }
@@ -101,22 +88,20 @@ main.container {
 }
 
 main.container .middle {
-  display: grid;
-  place-content: center;
-  background-color: #182048;
-  color: rgb(232, 230, 230);
-  height: 10rem;
-  width: 10rem;
-  margin-bottom: 2vh;
+  width: 14rem;
 }
 
-main.container .middle h1 {
-  font-family: sans-serif;
-  font-size: var(--fontsizeh1);
-  letter-spacing: 0.2rem;
+main.container .middle img {
+  width: 100%;
+  height: auto;
+  display: block;
 }
 
 p.unique {
+  padding: 0 25%;
+  order: 4;
+  -ms-flex-order: 4;
+  line-height: 1.5rem;
   font-size: var(--fontsizep);
   color: #2a345e;
   text-align: center;
@@ -124,6 +109,8 @@ p.unique {
 }
 .plinks {
   margin-bottom: 1.5vh;
+  order: 6;
+  -ms-flex-order: 6;
 }
 .container .plinks a {
   text-decoration: none;
@@ -134,6 +121,10 @@ p.unique {
 }
 .container .plinks a:hover {
   filter: brightness(120%);
+}
+.social {
+  order: 7;
+  -ms-flex-order: 7;
 }
 
 .social .fa-twitter {
@@ -156,7 +147,7 @@ p.unique {
 footer {
   margin-top: 20vh;
   padding: 6vh 0;
-  padding-bottom: 1vh;
+  padding-bottom: 2vh;
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
@@ -189,6 +180,7 @@ footer .bttop .fa-right-long {
   padding: 1rem;
   border: 1px solid var(--alignselfTextColor);
   background-color: var(--alignselfTextColor);
+  border-radius: 1rem;
 }
 
 @media screen and (max-width: 1024px) {
@@ -197,26 +189,21 @@ footer .bttop .fa-right-long {
     line-height: 2rem;
   }
 
-  main.container .middle h1 {
-    font-size: 2rem;
+  p.unique {
+    padding: 0 23%;
   }
+
   main.container .middle {
-    height: 8rem;
-    width: 8rem;
-    margin-bottom: 2vh;
+    width: 13rem;
   }
 }
 
 @media screen and (max-width: 858px) {
-  .update {
-    margin-top: 4vh;
-    padding-top: 6vh;
-  }
   .update h2 {
     font-size: 1.2rem;
     line-height: 2rem;
     font-weight: bolder;
-    margin-bottom: 1vh;
+    margin-bottom: 1.2vh;
   }
   .update ul li {
     font-size: 0.8rem;
@@ -226,22 +213,9 @@ footer .bttop .fa-right-long {
     margin-right: 1rem;
     font-size: 1rem;
   }
-  .update ul li:nth-child(even) {
-    margin-left: 0.3rem;
-  }
-
-  main.container .middle {
-    height: 8rem;
-    width: 8rem;
-    margin-bottom: 3vh;
-  }
-
-  main.container .middle h1 {
-    font-family: sans-serif;
-    font-size: 1.8rem;
-  }
 
   p.unique {
+    padding: 0 13%;
     font-size: 0.9rem;
     color: #2a345e;
     text-align: center;
@@ -271,9 +245,8 @@ footer .bttop .fa-right-long {
   }
 
   footer {
-    margin-top: 20vh;
     padding: 6vh 0;
-    padding-bottom: 1vh;
+    padding-bottom: 2vh;
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
@@ -319,21 +292,7 @@ footer .bttop .fa-right-long {
   }
 
   header {
-    padding: 3vh 1.5rem;
-    display: flex;
-    flex-flow: row nowrap;
-    align-items: center;
-    justify-content: space-between;
-  }
-
-  header figure {
-    width: 7rem;
-  }
-
-  header figure img {
-    display: block;
-    width: 100%;
-    height: auto;
+    padding: 4vh 1.5rem;
   }
 
   header div {
@@ -347,7 +306,7 @@ footer .bttop .fa-right-long {
 
 @media screen and (max-width: 426px) {
   body {
-    padding: 0 1.5rem;
+    padding: 0 1.2rem;
   }
 
   main.container {
@@ -355,51 +314,38 @@ footer .bttop .fa-right-long {
     gap: 5vh;
   }
   header {
-    padding: 3vh 0;
-  }
-
-  header figure {
-    width: 7rem;
+    padding: 3vh 0.7rem;
   }
 
   header div .fa-bars {
     font-size: 1.3rem;
   }
   .update {
-    margin: 0;
-    margin: 4vh 0;
+    margin: 2vh 0;
     padding: 0;
-    padding-top: 6vh;
+    padding-top: 2vh;
   }
   .update h2 {
     font-size: 1.3rem;
-    line-height: 1.5rem;
+    line-height: 1.6rem;
     font-weight: bolder;
-    margin-bottom: 2vh;
+    margin-bottom: 1.8vh;
   }
   .update ul li {
     font-size: 0.8rem;
-    margin-bottom: 0.5vh;
+    margin-bottom: 0.4vh;
   }
   .update ul li span {
     margin-right: 1rem;
     font-size: 1rem;
   }
-  .update ul li:nth-child(even) {
-    margin-left: 0;
-  }
-  main.container .middle {
-    height: 70vh;
-    width: 100%;
-    margin-bottom: 3vh;
-  }
 
-  main.container .middle h1 {
-    font-family: sans-serif;
-    font-size: 5.5rem;
+  main.container .middle {
+    width: 100%;
   }
 
   p.unique {
+    padding: 0;
     font-size: 0.9rem;
     color: #2a345e;
     text-align: center;
@@ -475,28 +421,16 @@ footer .bttop .fa-right-long {
   }
 }
 
-@media screen and (max-width: 376) {
-  main.container .middle {
-    height: 50vh;
-    width: 100%;
-    margin-bottom: 3vh;
+@media screen and (max-width: 376px) {
+  body {
+    padding: 0 1rem;
   }
 
-  main.container .middle h1 {
-    font-family: sans-serif;
-    font-size: 4.8rem;
+  main.container {
+    padding: 0.7rem;
+    gap: 5vh;
   }
-}
-
-@media screen and (max-width: 340px) {
-  main.container .middle {
-    height: 40vh;
-    width: 100%;
-    margin-bottom: 3vh;
-  }
-
-  main.container .middle h1 {
-    font-family: sans-serif;
-    font-size: 4.5rem;
+  header {
+    padding: 3vh 0.7rem;
   }
 }
