--- a/main.css
+++ b/main.css
@@ -347,7 +347,7 @@ footer .bttop .fa-right-long {
 
   main.container {
     padding: 0.7rem;
-    gap: 5vh;
+    gap: 4vh;
   }
   header {
     padding: 3vh 0.7rem;
@@ -445,10 +445,9 @@ footer .bttop .fa-right-long {
     background-color: var(--alignselfTextColor);
   }
 }
-
 @media screen and (max-width: 376px) {
   main.container {
-    margin-top: 7vh;
+    margin-top: 0;
     width: 100%;
     display: flex;
     flex-flow: column nowrap;
@@ -460,6 +459,7 @@ footer .bttop .fa-right-long {
 
   .update {
     margin-top: 0;
+    padding-top: 0;
   }
   main.container .middle {
     margin-bottom: 0;
