--- a/main.css
+++ b/main.css
@@ -347,17 +347,17 @@ footer .bttop .fa-right-long {
 
   main.container {
     padding: 0.7rem;
-    gap: 4vh;
+    gap: 0.5vh;
   }
   header {
-    padding: 3vh 0.7rem;
+    padding: 0.5vh 0.7rem;
   }
 
   header div .fa-bars {
     font-size: 1.3rem;
   }
   .update {
-    margin: 2vh 0;
+    margin: 1vh 0;
     padding: 0;
     padding-top: 2vh;
   }
@@ -408,7 +408,7 @@ footer .bttop .fa-right-long {
     flex-flow: column nowrap;
     align-items: center;
     justify-content: center;
-    gap: 5vh;
+    gap: 4vh;
     color: #172049;
     font-family: var(--fontFamLucida);
   }
@@ -470,8 +470,10 @@ footer .bttop .fa-right-long {
     padding: 0.7rem;
     /* gap: 5vh; */
   }
-  header {
-    padding: 3vh 0.7rem;
+
+  body header {
+    padding: 2vh 0.7rem;
+    padding-bottom: 1vh;
   }
 }
 
@@ -481,7 +483,7 @@ footer .bttop .fa-right-long {
     gap: 3vh;
     padding: 2vh 4vw;
   }
-  header {
+  body header {
     padding: 2vh 0.7rem;
     padding-bottom: 0;
   }
