--- a/main.css
+++ b/main.css
@@ -19,9 +19,16 @@ html {
   font-size: 100%;
 }
 
+html::-webkit-scrollbar {
+  display: none;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
 body {
   font-family: serif;
   word-wrap: break-word;
+  scroll-behavior: smooth;
 }
 header {
   padding: 1vh 3vw;
@@ -59,36 +66,43 @@ main.container {
 }
 .update ul {
   font-size: var(--fontsizelinks);
+  color: var(--linkslextcolor);
   font-weight: 400;
   list-style-type: none;
   display: flex;
   flex-flow: row wrap;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: center;
   column-gap: 2rem;
   row-gap: 0.5rem;
 }
 .update ul li {
-  line-height: 0;
+  line-height: 1.2rem;
 }
 
 .update ul li:nth-child(3):hover {
   color: #6ab343;
 }
 
+.update ul li:first-child {
+  border-bottom: 1.5px solid;
+}
+.update ul li:first-child + li {
+  border-bottom: 1.5px solid;
+}
 .update ul a {
   display: inline-block;
   font-size: var(--fontsizelinks);
   text-decoration: none;
-  color: var(--alignselfTextColor);
+  color: var(--linkslextcolor);
   font-weight: 400;
   border-bottom: 1.5px solid;
-  line-height: 1rem;
+  line-height: 1.2rem;
 }
 .update a:hover {
   color: #6ab343;
-  transform: scale(1.1);
-  transition-duration: 0.5ms;
+  transform: scale(1.05);
+  transition-duration: 0.1ms;
 }
 
 main.container .middle {
