--- a/main.css
+++ b/main.css
@@ -63,6 +63,8 @@ main.container {
   font-weight: 400;
   margin-bottom: 3vh;
   text-align: center;
+  word-spacing: -0.1rem;
+  letter-spacing: -0.03rem;
 }
 .update ul {
   font-size: var(--fontsizelinks);
@@ -77,7 +79,7 @@ main.container {
   row-gap: 0.5rem;
 }
 .update ul li {
-  line-height: 1.2rem;
+  line-height: 1.1rem;
 }
 
 .update ul li:nth-child(3):hover {
@@ -97,7 +99,7 @@ main.container {
   color: var(--linkslextcolor);
   font-weight: 400;
   border-bottom: 1.5px solid;
-  line-height: 1.2rem;
+  line-height: 1.1rem;
 }
 .update a:hover {
   color: #6ab343;
@@ -107,6 +109,7 @@ main.container {
 
 main.container .middle {
   width: 10rem;
+  margin-bottom: -1.5rem;
 }
 
 main.container .middle img {
@@ -122,10 +125,10 @@ main.container .middle img {
 }
 .container .plinks a {
   text-decoration: none;
-  color: var(--linkslextcolor);
+  color: #6ab343;
   font-size: var(--fontsizelinks);
   font-family: var(--fontFamLucida);
-  border-bottom: 1.5px solid var(--linkcolors);
+  border-bottom: 1.5px solid #6ab343;
 }
 .container .plinks a:hover {
   filter: brightness(120%);
