--- a/white_papers.css
+++ b/white_papers.css
@@ -5,7 +5,7 @@
 }
 
 :root {
-  --fontsizeh2: 2.5rem;
+  --fontsizeh2: 2.3rem;
   --fontsizep: 1rem;
   --fontsizelinks: 0.9rem;
   --linkslextcolor: rgb(119, 149, 208);
@@ -18,7 +18,6 @@
 html {
   font-size: 100%;
   scroll-behavior: smooth;
-  word-wrap: break-word;
 }
 
 html::-webkit-scrollbar {
@@ -26,20 +25,23 @@ html::-webkit-scrollbar {
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
-
 body {
   font-family: serif;
   word-wrap: break-word;
 }
 
+main {
+  width: 94%;
+  margin: 0 auto;
+}
+
 main header {
-  padding: 2.4rem 3.2rem;
-  padding-bottom: 2rem;
+  padding: 1.8rem 0;
 }
 
 main header figure {
-  width: 7.5%;
-  min-width: 4rem;
+  width: 7%;
+  min-width: 3rem;
   max-width: 6rem;
 }
 
@@ -50,61 +52,63 @@ main header figure img {
 
 .whitepapers p.paper {
   color: #172049;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: var(--fontsizeh2);
   color: var(--alignselfTextColor);
 }
 
 section.whitepapers {
-  margin-top: 90px;
-  margin-bottom: 500px;
+  margin-top: 20px;
+  margin-bottom: 400px;
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
   justify-content: center;
-  gap: 80px;
+  gap: 60px;
 }
 
 section.whitepapers div.companies {
-  width: 94%;
-  margin: 0 auto;
   display: flex;
   flex-flow: row wrap;
   align-items: center;
   justify-content: center;
-  row-gap: 70px;
-  column-gap: 14%;
+  row-gap: 50px;
+  column-gap: 17%;
 }
 
 section.whitepapers div.companies p {
-  min-width: 80px;
-  width: 10%;
-  max-width: 150px;
+  min-width: 150px;
+  width: 45%;
+  max-width: 250px;
+  box-shadow: 4px 4px 40px 10px rgba(167, 166, 166, 0.1),
+    -4px -4px 40px 10px rgba(167, 166, 166, 0.1);
+}
+
+section.whitepapers div.companies p:hover {
+  transform: scale(1.01); /*negative values inverts images upside down*/
+  transition-duration: 0.1s;
+  box-shadow: none;
 }
 
 .whitepapers .companies p a img {
   width: 100%;
   height: auto;
+  display: block;
+  border-radius: 8px;
 }
 
 footer {
-  margin-top: 4vh;
-  padding: 6vh 0;
   padding-bottom: 1vh;
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
   justify-content: center;
-  gap: 5vh;
+  gap: 4vh;
   color: #172049;
   font-family: var(--fontFamLucida);
 }
 
-.social .fa-twitter {
-  font-size: 1.2rem;
-  color: rgb(23, 32, 73);
-  margin-right: 0.5vw;
-}
 .social .fa-twitter:hover,
 .social .fa-linkedin-in:hover {
   display: inline-block;
@@ -112,12 +116,11 @@ footer {
   transition-duration: 0.5ms;
 }
 .social .fa-linkedin-in {
-  font-size: 1.2rem;
-  color: #454d6d;
-  margin-left: 0.5vw;
-}
-footer p.copy {
-  margin-top: 23vh;
+  font-size: 1.4rem;
+  color: #fff;
+  padding: 8px;
+  background-color: rgb(0, 119, 175);
+  border-radius: 4px;
 }
 
 footer p {
@@ -144,62 +147,52 @@ footer .bttop {
 footer .bttop .fa-right-long {
   transform: rotate(-90deg);
   color: white;
-  padding: 1rem;
+  padding: 10px;
   border: 1px solid var(--alignselfTextColor);
   background-color: var(--alignselfTextColor);
-  border-radius: 1rem;
+  border-radius: 4px;
 }
 
-@media screen and (max-width: 1025px) {
-}
-
-@media screen and (max-width: 768px) {
-  main header {
-    padding: 2rem 2.5rem;
-    padding-bottom: 2rem;
-  }
-
-  main header figure {
-    width: 9%;
-    min-width: 3.5rem;
-    max-width: 5rem;
-  }
-
+@media screen and (max-width: 1024px) {
   .whitepapers p.paper {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 1.9rem;
-    color: var(--alignselfTextColor);
+    font-size: 2.1rem;
   }
-
-  section.whitepapers {
-    margin-top: 100px;
-    margin-bottom: 500px;
-    gap: 75px;
-  }
-
   section.whitepapers div.companies {
-    width: 94%;
-    row-gap: 60px;
     column-gap: 14%;
   }
 
   section.whitepapers div.companies p {
-    min-width: 80px;
-    width: 10%;
-    max-width: 150px;
+    min-width: 150px;
+    width: 45%;
+    max-width: 240px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  main header {
+    padding: 1.5rem 0;
   }
 
-  footer {
-    margin-top: 4vh;
-    padding-bottom: 1vh;
-    gap: 5vh;
+  main header figure {
+    width: 6%;
+    min-width: 3rem;
+    max-width: 6rem;
   }
 
-  .social .fa-twitter {
-    font-size: 1.2rem;
-    color: rgb(23, 32, 73);
-    margin-right: 0.7vw;
+  section.whitepapers {
+    gap: 40px;
   }
+
+  section.whitepapers div.companies p {
+    min-width: 150px;
+    width: 38%;
+    max-width: 240px;
+  }
+
+  .whitepapers p.paper {
+    font-size: 1.8rem;
+  }
+
   .social .fa-twitter:hover,
   .social .fa-linkedin-in:hover {
     display: inline-block;
@@ -208,11 +201,7 @@ footer .bttop .fa-right-long {
   }
   .social .fa-linkedin-in {
     font-size: 1.2rem;
-    color: #454d6d;
-    margin-left: 0.7vw;
-  }
-  footer p.copy {
-    margin-top: 23vh;
+    padding: 6px;
   }
 
   footer p {
@@ -220,134 +209,156 @@ footer .bttop .fa-right-long {
   }
 
   footer p a {
+    color: var(--linkslextcolor);
     font-size: 0.8rem;
+    font-family: var(--fontFamLucida);
+    border-bottom: 1.5px solid var(--linkcolors);
+  }
+
+  footer p a:hover {
+    filter: brightness(120%);
   }
 
   footer .bttop .fa-right-long {
     transform: rotate(-90deg);
-    color: white;
-    padding: 1rem;
+    padding: 6px;
     border: 1px solid var(--alignselfTextColor);
     background-color: var(--alignselfTextColor);
-    border-radius: 0.5rem;
+    border-radius: 4px;
   }
 }
 
 @media screen and (max-width: 642px) {
-  section.whitepapers {
-    margin-top: 80px;
-    margin-bottom: 800px;
-    gap: 100px;
+  main {
+    width: 92%;
   }
-
   section.whitepapers div.companies {
-    width: 94%;
-    row-gap: 60px;
-    column-gap: 45%;
-    padding: 0 10%;
-  }
-
-  .whitepapers p.paper {
-    color: #172049;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 1.75rem;
-    color: var(--alignselfTextColor);
+    column-gap: 10%;
   }
 
   section.whitepapers div.companies p {
-    min-width: 80px;
-    width: 12%;
-    max-width: 150px;
-  }
-}
-
-@media screen and (max-width: 576px) {
-  section.whitepapers {
-    margin-top: 80px;
-    margin-bottom: 1000px;
-    gap: 100px;
-  }
-
-  section.whitepapers div.companies {
-    width: 90%;
-    row-gap: 60px;
-    column-gap: 30%;
-    padding: 0 10%;
-    justify-content: space-evenly;
+    min-width: 150px;
+    width: 45%;
+    max-width: 240px;
   }
 
   .whitepapers p.paper {
-    color: #172049;
-    font-family: Arial, Helvetica, sans-serif;
     font-size: 1.7rem;
-    color: var(--alignselfTextColor);
+  }
+  .social .fa-linkedin-in {
+    font-size: 1rem;
+    padding: 5px;
   }
 
-  section.whitepapers div.companies p {
-    min-width: 80px;
-    width: 12%;
-    max-width: 150px;
+  footer p {
+    font-size: 0.8rem;
+  }
+
+  footer p a {
+    color: var(--linkslextcolor);
+    font-size: 0.75rem;
+    font-family: var(--fontFamLucida);
+    border-bottom: 1.5px solid var(--linkcolors);
   }
 }
 
 @media screen and (max-width: 482px) {
-  section.whitepapers {
-    margin-top: 80px;
-    margin-bottom: 1000px;
-    gap: 100px;
+  main header {
+    padding: 5vw 0;
   }
 
-  section.whitepapers div.companies {
+  main {
     width: 90%;
-    row-gap: 60px;
-    column-gap: 30%;
-    padding: 0 10%;
-    justify-content: space-evenly;
   }
-
-  .whitepapers p.paper {
-    color: #172049;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 1.6rem;
-    color: var(--alignselfTextColor);
+  section.whitepapers {
+    margin-top: 10px;
+    /* width: 100%; */
+    margin-bottom: 100px;
+  }
+  section.whitepapers div.companies {
+    column-gap: 10%;
   }
 
   section.whitepapers div.companies p {
-    min-width: 80px;
-    width: 12%;
-    max-width: 150px;
+    min-width: 200px;
+    max-width: 300px;
+    flex: 1 1 150px;
+  }
+
+  .whitepapers p.paper {
+    font-size: 1.8rem;
+  }
+  .social .fa-linkedin-in {
+    font-size: 1rem;
+    padding: 5px;
+  }
+
+  footer p {
+    font-size: 0.85rem;
+  }
+
+  footer p a {
+    color: var(--linkslextcolor);
+    font-size: 0.75rem;
+    font-family: var(--fontFamLucida);
+    border-bottom: 1.5px solid var(--linkcolors);
   }
 }
 
 @media screen and (max-width: 376px) {
+  main header {
+    padding: 5vw 0;
+  }
+
+  main header figure {
+    width: 8%;
+    min-width: 2.5rem;
+    max-width: 6rem;
+  }
+
+  main {
+    width: 90%;
+  }
   section.whitepapers {
-    gap: 130px;
-    justify-content: center;
+    margin-top: 4px;
+    gap: 7vw;
+    margin-bottom: 60px;
   }
 
   section.whitepapers div.companies {
-    width: 90%;
-    row-gap: 50px;
-    column-gap: 30%;
-    margin: 0 auto;
-    justify-content: center;
-  }
-
-  .whitepapers p.paper {
-    color: #172049;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 1.4rem;
-    color: var(--alignselfTextColor);
+    row-gap: 10vw;
+    column-gap: 5%;
   }
 
   section.whitepapers div.companies p {
-    min-width: 80px;
-    width: 40%;
-    margin: 0 auto;
+    min-width: 190px;
+    max-width: 300px;
+    flex: 1 1 150px;
   }
 
-  section.whitepapers div.companies p img {
-    width: 100%;
-    height: auto;
+  .whitepapers p.paper {
+    font-size: 1.6rem;
+    box-shadow: 4px 4px 40px 10px rgba(167, 166, 166, 0.1),
+      -4px -4px 40px 10px rgba(167, 166, 166, 0.1);
+    background-color: rgba(167, 166, 166, 0.12);
+  }
+  .social .fa-linkedin-in {
+    font-size: 1rem;
+    padding: 5px;
+  }
+
+  footer {
+    width: 90%;
+    margin: 0 auto;
+  }
+  footer p {
+    font-size: 0.75rem;
+  }
+
+  footer p a {
+    color: var(--linkslextcolor);
+    font-size: 0.7rem;
+    font-family: var(--fontFamLucida);
+    border-bottom: 1.5px solid var(--linkcolors);
   }
 }
