--- a/main.css
+++ b/main.css
@@ -17,6 +17,7 @@
 
 html {
   font-size: 100%;
+  scroll-behavior: smooth;
 }
 
 html::-webkit-scrollbar {
@@ -28,10 +29,9 @@ html::-webkit-scrollbar {
 body {
   font-family: serif;
   word-wrap: break-word;
-  scroll-behavior: smooth;
 }
 header {
-  padding: 1vh 3vw;
+  padding: 1vh 3vw; /*Header*/
   margin: 2vh 0;
 }
 
@@ -76,8 +76,8 @@ main.container {
   align-items: center;
   justify-content: center;
   column-gap: 2rem;
-  row-gap: 0.5rem;
 }
+
 .update ul li {
   line-height: 1.1rem;
 }
@@ -110,7 +110,7 @@ main.container {
 
 main.container .middle {
   width: 10rem;
-  margin-bottom: -1.5rem;
+  margin-bottom: -30px;
 }
 
 main.container .middle img {
@@ -188,7 +188,7 @@ footer .bttop {
 footer .bttop .fa-right-long {
   transform: rotate(-90deg);
   color: white;
-  padding: 0.7rem;
+  padding: 0.6rem;
   border: 1px solid var(--alignselfTextColor);
   background-color: var(--alignselfTextColor);
   border-radius: 4px;
@@ -206,6 +206,11 @@ footer .bttop .fa-right-long {
     width: 8.5rem;
   }
 
+  main.container .middle {
+    width: 10rem;
+    margin-bottom: -33px;
+  }
+
   footer {
     margin-top: 30vh;
   }
@@ -217,13 +222,13 @@ footer .bttop .fa-right-long {
   }
   .update p {
     font-size: 1.3rem;
-    line-height: 1.5rem;
+    line-height: 1.1rem;
     font-weight: 400;
     margin-bottom: 2vh;
     text-align: center;
   }
   .container.update ul li {
-    font-size: 0.9rem;
+    font-size: 0.85rem;
     margin-bottom: 0.2vh;
   }
 
@@ -237,7 +242,7 @@ footer .bttop .fa-right-long {
   .container .plinks a {
     text-decoration: none;
     color: var(--linkslextcolor);
-    font-size: 0.9rem;
+    font-size: 0.85rem;
     font-family: var(--fontFamLucida);
     border-bottom: 1.5px solid var(--linkcolors);
   }
@@ -258,7 +263,7 @@ footer .bttop .fa-right-long {
     flex-flow: column nowrap;
     align-items: center;
     justify-content: center;
-    gap: 5vh;
+    gap: 4vh;
     color: #172049;
     font-family: var(--fontFamLucida);
   }
@@ -286,7 +291,7 @@ footer .bttop .fa-right-long {
   footer .bttop .fa-right-long {
     transform: rotate(-90deg);
     color: white;
-    padding: 0.8rem;
+    padding: 0.7rem;
     font-size: 0.8rem;
     border: 1px solid var(--alignselfTextColor);
     background-color: var(--alignselfTextColor);
@@ -306,10 +311,9 @@ footer .bttop .fa-right-long {
     display: block;
     color: var(--alignselfTextColor);
   }
-
   .update p {
     font-size: 1.3rem;
-    line-height: 1.5rem;
+    line-height: 1.3rem;
     font-weight: 400;
     margin-bottom: 2vh;
     text-align: center;
@@ -320,24 +324,35 @@ footer .bttop .fa-right-long {
   }
 
   header div .fa-bars {
-    font-size: 1.4rem;
+    font-size: 1.3rem;
   }
   main.container .update ul li {
-    line-height: 1.5rem;
-    font-size: 0.9rem;
+    line-height: 1.3rem;
+    font-size: 0.85rem;
+  }
+  footer {
+    gap: 3.5vh;
   }
 }
 
 @media screen and (max-width: 426px) {
   body {
-    padding: 1.5rem 2rem;
+    padding: 1rem 2rem;
   }
 
+  header div .fa-bars {
+    font-size: 1.5rem;
+  }
   main.container {
     margin: 0;
     margin-top: 5%;
     padding: 0;
     gap: 2vh;
+  }
+
+  main.container .middle {
+    width: 100%;
+    margin-bottom: -10px;
   }
 
   header {
@@ -357,7 +372,7 @@ footer .bttop .fa-right-long {
   .update ul {
     display: flex;
     flex-flow: column nowrap;
-    gap: 0;
+    gap: 0.5rem;
   }
   .update ul li {
     font-size: 0.8rem;
@@ -369,7 +384,6 @@ footer .bttop .fa-right-long {
     margin-top: 0;
     width: 100%;
   }
-
   .plinks {
     margin: 1rem 0;
   }
@@ -435,12 +449,21 @@ footer .bttop .fa-right-long {
   }
 }
 @media screen and (max-width: 376px) {
-  .update p {
-    font-size: 1.25rem;
+  main.container .middle {
+    margin-top: 5px;
+    margin-bottom: -10px;
   }
 
+  header {
+    margin: 2vh 0;
+    /* margin-top: 1vh; */
+  }
+
+  .update p {
+    font-size: 1.18rem;
+  }
   header div .fa-bars {
-    font-size: 1.4rem;
+    font-size: 1.2rem;
   }
   .update {
     margin: 1vh 0;
@@ -450,5 +473,13 @@ footer .bttop .fa-right-long {
     display: flex;
     flex-flow: column nowrap;
     gap: 0.5rem;
+  }
+  footer p a {
+    line-height: 14px;
+  }
+  main.container {
+    padding-top: 0;
+    margin-top: 0;
+    margin-bottom: 20px;
   }
 }
