--- a/reference.css
+++ b/reference.css
@@ -46,3 +46,9 @@ section p {
   font-size: 1rem;
   line-height: 1.1rem;
 }
+
+@media screen and (max-width: 1024px) {
+  section {
+    width: 96%;
+  }
+}
