--- a/main.css
+++ b/main.css
@@ -31,8 +31,8 @@ body {
   word-wrap: break-word;
 }
 header {
-  padding: 1vh 3vw; /*Header*/
-  margin: 2vh 0;
+  padding: 6px 3vw; /*Header*/
+  margin: 12px 0;
 }
 
 header div {
@@ -46,14 +46,14 @@ main.container {
   flex-flow: column nowrap;
   align-items: center;
   justify-content: center;
-  gap: 5vh;
-  padding: 2vh 4vw;
+  gap: 30px;
+  padding: 12px 4vw;
 }
 
 .update {
   order: 2;
   -ms-flex-order: 2;
-  padding-top: 2vh;
+  padding-top: 12px;
   color: var(--alignselfTextColor);
   font-family: var(--fontFamLucida);
 }
@@ -61,7 +61,7 @@ main.container {
   font-size: var(--fontsizeh2);
   line-height: 1.5rem;
   font-weight: 400;
-  margin-bottom: 3vh;
+  margin-bottom: 10px;
   text-align: center;
   word-spacing: -0.1rem;
   letter-spacing: -0.03rem;
@@ -75,11 +75,7 @@ main.container {
   flex-flow: row wrap;
   align-items: center;
   justify-content: center;
-  column-gap: 2rem;
-}
-
-.update ul li {
-  line-height: 1.1rem;
+  column-gap: 7%;
 }
 
 .update ul li:nth-child(3):hover {
@@ -120,14 +116,14 @@ main.container .middle img {
 }
 
 .plinks {
-  margin-bottom: 1.5vh;
+  margin-bottom: 9px;
   order: 6;
   -ms-flex-order: 6;
 }
 .container .plinks a {
   text-decoration: none;
   color: #6ab343;
-  font-size: var(--fontsizelinks);
+  font-size: 1.4rem;
   font-family: var(--fontFamLucida);
   border-bottom: 1.5px solid #6ab343;
 }
@@ -153,14 +149,14 @@ main.container .middle img {
 }
 
 footer {
-  margin-top: 25vh;
+  margin-top: 150px;
   padding: 6vh 0;
-  padding-bottom: 1vh;
+  padding-bottom: 6px;
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
   justify-content: center;
-  gap: 4vh;
+  gap: 24px;
   color: #172049;
   font-family: var(--fontFamLucida);
 }
@@ -199,11 +195,12 @@ footer .bttop .fa-right-long {
     font-size: var(--fontsizeh2);
     line-height: 1.5rem;
     font-weight: 400;
-    margin-bottom: 2vh;
+    margin-bottom: 12px;
     text-align: center;
   }
-  s main.container .middle {
-    width: 8.5rem;
+
+  .container .plinks a {
+    font-size: 1.4rem;
   }
 
   main.container .middle {
@@ -212,7 +209,7 @@ footer .bttop .fa-right-long {
   }
 
   footer {
-    margin-top: 30vh;
+    margin-top: 180px;
   }
 }
 
@@ -224,9 +221,10 @@ footer .bttop .fa-right-long {
     font-size: 1.3rem;
     line-height: 1.1rem;
     font-weight: 400;
-    margin-bottom: 2vh;
+    margin-bottom: 12px;
     text-align: center;
   }
+
   .container.update ul li {
     font-size: 0.85rem;
     margin-bottom: 0.2vh;
@@ -237,14 +235,13 @@ footer .bttop .fa-right-long {
   }
 
   .plinks {
-    margin-bottom: 1.5vh;
+    margin-bottom: 9px;
   }
   .container .plinks a {
     text-decoration: none;
-    color: var(--linkslextcolor);
-    font-size: 0.85rem;
+    color: #6ab343;
+    font-size: 1.1rem;
     font-family: var(--fontFamLucida);
-    border-bottom: 1.5px solid var(--linkcolors);
   }
 
   .container .plinks a:hover {
@@ -257,13 +254,13 @@ footer .bttop .fa-right-long {
   }
 
   footer {
-    padding: 6vh 0;
-    padding-bottom: 1vh;
+    padding: 36px 0;
+    padding-bottom: 6px;
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
     justify-content: center;
-    gap: 4vh;
+    gap: 18px;
     color: #172049;
     font-family: var(--fontFamLucida);
   }
@@ -276,7 +273,6 @@ footer .bttop .fa-right-long {
     color: var(--linkslextcolor);
     font-size: 0.85rem;
     font-family: var(--fontFamLucida);
-    border-bottom: 1.5px solid var(--linkcolors);
   }
 
   footer p a:hover {
@@ -304,7 +300,7 @@ footer .bttop .fa-right-long {
   }
 
   header {
-    padding: 4vh 1.5rem;
+    padding: 24px 1.5rem;
   }
 
   header div {
@@ -312,14 +308,14 @@ footer .bttop .fa-right-long {
     color: var(--alignselfTextColor);
   }
   .update p {
-    font-size: 1.3rem;
-    line-height: 1.3rem;
+    line-height: 1.4rem;
     font-weight: 400;
-    margin-bottom: 2vh;
+    margin-bottom: 4px;
     text-align: center;
+    font-size: 1.25rem;
   }
 
-  .update p {
+  .container .plinks a {
     font-size: 1.25rem;
   }
 
@@ -331,7 +327,7 @@ footer .bttop .fa-right-long {
     font-size: 0.85rem;
   }
   footer {
-    gap: 3.5vh;
+    gap: 18px;
   }
 }
 
@@ -341,13 +337,21 @@ footer .bttop .fa-right-long {
   }
 
   header div .fa-bars {
-    font-size: 1.5rem;
+    font-size: 1.4rem;
   }
+
+  .update ul li:first-child {
+    border-bottom: 1.5px solid;
+  }
+  .update ul li:first-child + li {
+    border-bottom: 1.5px solid;
+  }
+
   main.container {
     margin: 0;
     margin-top: 5%;
     padding: 0;
-    gap: 2vh;
+    gap: 7px;
   }
 
   main.container .middle {
@@ -361,9 +365,9 @@ footer .bttop .fa-right-long {
   }
 
   .update {
-    margin: 1vh 0;
+    margin: 6px 0;
     padding: 0;
-    padding-top: 2vh;
+    padding-top: 8px;
     display: flex;
     flex-flow: column nowrap;
     gap: 1rem;
@@ -372,12 +376,10 @@ footer .bttop .fa-right-long {
   .update ul {
     display: flex;
     flex-flow: column nowrap;
-    gap: 0.5rem;
+    gap: 8px;
   }
   .update ul li {
     font-size: 0.8rem;
-    margin-bottom: 0;
-    line-height: 0;
   }
 
   main.container .middle {
@@ -385,14 +387,14 @@ footer .bttop .fa-right-long {
     width: 100%;
   }
   .plinks {
-    margin: 1rem 0;
+    margin: 20px 0;
   }
   .container .plinks a {
     text-decoration: none;
     color: var(--linkslextcolor);
-    font-size: 0.9rem;
     font-family: var(--fontFamLucida);
     border-bottom: 1.5px solid var(--linkcolors);
+    padding-bottom: 2px;
   }
   .container .plinks a:hover {
     filter: brightness(120%);
@@ -404,14 +406,14 @@ footer .bttop .fa-right-long {
   }
 
   footer {
-    margin-top: 20vh;
-    padding: 6vh 0;
-    padding-bottom: 1vh;
+    margin-top: 140px;
+    padding: 36px 0;
+    padding-bottom: 2px;
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
     justify-content: center;
-    gap: 4vh;
+    gap: 20px;
     color: #172049;
     font-family: var(--fontFamLucida);
   }
@@ -449,14 +451,22 @@ footer .bttop .fa-right-long {
   }
 }
 @media screen and (max-width: 376px) {
+  body {
+    padding: 1rem 1.5rem;
+  }
+
   main.container .middle {
     margin-top: 5px;
     margin-bottom: -10px;
   }
 
   header {
-    margin: 2vh 0;
+    margin: 7px 0;
     /* margin-top: 1vh; */
+  }
+
+  .container .plinks a {
+    font-size: 1.18rem;
   }
 
   .update p {
@@ -469,10 +479,18 @@ footer .bttop .fa-right-long {
     margin: 1vh 0;
     margin-bottom: 0;
     padding: 0;
-    padding-top: 2vh;
+    padding-top: 10px;
     display: flex;
     flex-flow: column nowrap;
-    gap: 0.5rem;
+    gap: 16px;
+  }
+
+  .update ul {
+    gap: 12px;
+  }
+
+  main.container .plinks {
+    margin-bottom: 30px;
   }
   footer p a {
     line-height: 14px;
@@ -481,5 +499,8 @@ footer .bttop .fa-right-long {
     padding-top: 0;
     margin-top: 0;
     margin-bottom: 20px;
+  }
+  footer {
+    margin-top: 100px;
   }
 }
