--- a/white_papers.css
+++ b/white_papers.css
@@ -5,7 +5,7 @@
 }
 
 :root {
-  --fontsizeh2: 2.3rem;
+  --fontsizeh2: 1.4rem;
   --fontsizep: 1rem;
   --fontsizelinks: 0.9rem;
   --linkslextcolor: rgb(119, 149, 208);
@@ -164,7 +164,7 @@ footer .bttop .fa-right-long {
   }
 
   .whitepapers p.paper {
-    font-size: 2.1rem;
+    font-size: 1.3rem;
   }
 
   section.whitepapers {
@@ -209,7 +209,7 @@ footer .bttop .fa-right-long {
   }
 
   .whitepapers p.paper {
-    font-size: 1.9rem;
+    font-size: 1.25rem;
   }
 
   .social .fa-twitter:hover,
@@ -263,9 +263,9 @@ footer .bttop .fa-right-long {
       -4px -4px 40px 5px rgba(167, 166, 166, 0.2);
   }
 
-  .whitepapers p.paper {
+  /* .whitepapers p.paper {
     font-size: 1.7rem;
-  }
+  } */
   .social .fa-linkedin-in {
     font-size: 1rem;
     padding: 5px;
@@ -307,7 +307,7 @@ footer .bttop .fa-right-long {
   }
 
   .whitepapers p.paper {
-    font-size: 1.8rem;
+    font-size: 1.25rem;
   }
   .social .fa-linkedin-in {
     font-size: 1rem;
@@ -354,7 +354,7 @@ footer .bttop .fa-right-long {
     row-gap: 10vw;
   }
   .whitepapers p.paper {
-    font-size: 1.6rem;
+    font-size: 1.2rem;
     box-shadow: none;
   }
   .social .fa-linkedin-in {
